# folkart

./: .env.enc  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
legacy/src/: app.css  app.html
legacy/src/lib/: Controls.svelte  Loading.svelte  Modal.svelte  StoreToggle.svelte  ToolTip.svelte  TrackList.svelte  WebPlayer.svelte  stores.ts
legacy/src/routes/api/: index.json.ts
rust/: Cargo.toml  tailwind.config.js
rust/src/: assets.rs  main.rs  templates.rs
rust/src/routes/: mod.rs
rust/templates/: body.html  index.html
src/: app.css  app.html  types.ts
src/lib/: Controls.svelte  DarkModeSwitch.svelte  Hotkeys.svelte  Loading.svelte  Modal.svelte  Obi.svelte  Player.svelte  Settings.svelte  StoreToggle.svelte  ToolTip.svelte  TrackList.svelte  WaveformPlayer.svelte  WebPlayer.svelte  localStore.ts  notion.ts  secrets.ts  shortcut.ts  stores.js
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  __layout.svelte  index.svelte
src/routes/api/: index.json.ts  waveform.json.ts
src/routes/waveform/: +server.ts
static/: manifest.json
